# rofi-obsidian

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  committed.toml  flake.nix  shell.nix
.github/workflows/: cd.yaml  ci.yaml
src/: args.rs  config.rs  display_name.rs  main.rs
test_assets/: base.json  extra_fields.json
