[package]
name = "rofi-obsidian"
description = "Launch your Obsidian vaults from the comfort of rofi"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/Nydragon/rofi-obsidian"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
open = "5.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url = "2.5.0"
